# Claude-Multi

./: .gitignore  CROSS-PLATFORM-SUMMARY.md  EXAMPLES.md  INSTRUCTIONS-GUIDE.md  LICENSE  PLATFORM-NOTES.md  QUICK-REFERENCE.md  QUICKSTART.md  README.md  RELEASE-NOTES.md  SUMMARY.md  UNIX-SETUP.md  install.sh  pyproject.toml  run.bat  run.sh  setup-alias.md
claude_multi/: __init__.py  cli.py  config.py  memory.py  session.py
